--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@
 :root {
   --gray-color: #f5f5f5;
   --black-color: #363636;
+  --bg-color: white;
+}
+:dark {
+  --gray-color: #0a0a0a;
+  --black-color: #c9c9c9;
+  --bg-color: #000000;
 }
 
 body {
@@ -55,9 +61,55 @@ li {
   font-size: 1.2rem;
 }
 
+/* main */
+main {
+  width: 700px;
+  height: calc(100vh - 145px);
+  margin: auto;
+}
+
+.profile-seciton {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  align-items: center;
+  margin-top: 40px;
+}
+.profile-name {
+  color: var(--black-color);
+  font-size: 3rem;
+}
+.profile-image {
+  border-radius: 50%;
+  width: 200px;
+  height: 200px;
+}
+
+.contact-links {
+  font-size: 1.4rem;
+  display: flex;
+  gap: 30px;
+}
+.contact-links > a {
+  color: var(--black-color);
+}
+
+.about-section {
+  color: var(--black-color);
+  padding: 20px 0;
+}
+.about-section > h3 {
+  font-size: 1.7rem;
+  margin-bottom: 10px;
+}
+.about-section > p {
+  font-size: 1.2rem;
+}
+
 /*footer css */
 .footer {
   background-color: var(--gray-color);
   color: var(--black-color);
   text-align: center;
+  padding: 10px 0;
 }
