--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@
 :root {
   --gray-color: #f5f5f5;
   --black-color: #363636;
-  --bg-color: white;
+  --bg-color: #fff;
 }
-:dark {
+[data-theme="dark"] {
   --gray-color: #0a0a0a;
   --black-color: #c9c9c9;
   --bg-color: #000000;
@@ -18,6 +18,7 @@
 body {
   width: 100%;
   height: 100vh;
+  background-color: var(--bg-color);
 }
 a {
   text-decoration: none;
@@ -59,12 +60,14 @@ li {
   background-color: transparent;
   border: none;
   font-size: 1.2rem;
+  cursor: pointer;
+  color: var(--black-color);
 }
 
 /* main */
 main {
   width: 700px;
-  height: calc(100vh - 145px);
+  height: calc(100vh - 142px);
   margin: auto;
 }
 
