--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 :root {
   --gray-color: #f5f5f5;
+  --light-gray-color: #e8e8e8;
   --black-color: #363636;
   --bg-color: #fff;
 }
@@ -13,6 +14,7 @@
   --gray-color: #0a0a0a;
   --black-color: #c9c9c9;
   --bg-color: #000000;
+  --light-gray-color: #171717;
 }
 
 body {
@@ -34,6 +36,7 @@ li {
   padding: 20px 300px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   color: var(--black-color);
   font-size: 1.3rem;
 }
@@ -44,16 +47,23 @@ li {
 }
 .nav-right-content > ul {
   display: flex;
-  gap: 20px;
-}
-
-.nav-right-content > ul {
-  display: flex;
-  gap: 20px;
+  gap: 5px;
 }
 
 .nav-right-content > ul > li > a {
   color: var(--black-color);
+}
+.nav-right-content > ul > li {
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.nav-right-content > ul > li:hover {
+  background-color: var(--light-gray-color);
+}
+
+.active {
+  background-color: var(--light-gray-color);
 }
 
 .theme-changer-btn {
