--- a/style.css
+++ b/style.css
@@ -76,9 +76,10 @@ li {
 
 /* main */
 main {
-  width: 700px;
-  height: calc(100vh - 142px);
-  margin: auto;
+  width: 800px;
+  min-height: 100vh;
+  padding: 30px 0px;
+  margin: auto; 
 }
 
 .profile-seciton {
@@ -126,3 +127,5 @@ main {
   text-align: center;
   padding: 10px 0;
 }
+
+
